<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home_main2_drawer"/>
        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/ic_announcement"
            android:title="@string/title_announcements_main2_drawer" />
        <item
            android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_book"
            android:title="@string/title_lessons_main2_drawer" />
        <item
            android:id="@+id/nav_organizations"
            android:icon="@drawable/ic_party"
            android:title="@string/title_organizations_main2_drawer" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group"
            android:title="@string/title_groups_main2_drawer" />
        <item
            android:id="@+id/nav_follow_lessons"
            android:icon="@drawable/ic_book"
            android:title="@string/title_follow_lesson_drawer"
            />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
